update package.json keywords

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "keywords": [
     "react",
     "material-ui",
-    "note"
+    "node",
+    "jsx",
+    "css",
+    "html"
   ],
   "main": "src/index.js",
   "dependencies": {
